--- a/.github/workflows/karsajobs-ui.yml
+++ b/.github/workflows/karsajobs-ui.yml
@@ -16,11 +16,9 @@ jobs:
     - uses: actions/checkout@v3
         
     - name: lint-dockerfile
-      run: |
-        sudo apt update && sudo apt install shellcheck -y
-        sudo wget -O /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-        sudo chmod u+x /usr/local/bin/hadolint
-        hadolint Dockerfile
+      uses: hadolint/hadolint-action@v3.1.0
+      with:
+        dockerfile: Dockerfile
         
     - name: build-app-karsajobs-ui
       uses: macbre/push-to-ghcr@master
